@@ -1,3 +1,11 @@
+2002-05-28  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* WaveBand.pm: New CPAN release 0.04 (with README!)
+
+2002-05-27  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* WaveBand.pm: Add licence statement 
+
 2002-05-16  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* CPAN release 0.03
